# AI-Agent

MiMo-Claw/skills/plugin-skills/: dingtalk-channel-rules  dingtalk-troubleshoot  dws-cli  feishu-doc  feishu-drive  feishu-perm  feishu-wiki  qqbot-channel  qqbot-media  qqbot-remind
Super-doubao/skills/lark-doc/: SKILL.md
Super-doubao/skills/lark-sheets/: SKILL.md
Xiao-Q/skills/a-savior-of-book-drought/: README.md  SKILL.md  _meta.json
Xiao-Q/skills/a-share-penny-stock-technical-analysis/: SKILL.md
Xiao-Q/skills/add_skill/: SKILL.md
Xiao-Q/skills/admapix/: README.md  README_CN.md  SKILL.md  _meta.json
Xiao-Q/skills/advanced-html-generator/: SKILL.md
Xiao-Q/skills/agent-court-v2026/: SKILL.md  SKILL_INTRO.md  _meta.json
Xiao-Q/skills/agent-ecosystem/: README.md  SKILL.md  skillhub.json
Xiao-Q/skills/agently-mail/: SKILL.md  _meta.json
Xiao-Q/skills/agentscope-builder/: SKILL.md
Xiao-Q/skills/ai-article/: _meta.json
Xiao-Q/skills/ai-gif-compressor/: _meta.json
Xiao-Q/skills/ai-image-editor/: SKILL.md
Xiao-Q/skills/ai-kujiale-design/: _meta.json
Xiao-Q/skills/ai-medical-record-guide/: SKILL.md
Xiao-Q/skills/ai-music-generator/: INSTALL.md  README.md  SKILL.md  _meta.json  package.json  release-manifest.json  runtime-defaults.json
Xiao-Q/skills/ai-planer/: SKILL.md
Xiao-Q/skills/ai-shifu-course-creator/: SKILL.md  _meta.json
Xiao-Q/skills/ai-song/: INSTALL.md  README.md  SKILL.md  _meta.json  package.json  release-manifest.json  runtime-defaults.json
Xiao-Q/skills/ai-song-generator/: INSTALL.md  README.md  SKILL.md  _meta.json  package.json  release-manifest.json  runtime-defaults.json
Xiao-Q/skills/aishipin/: SKILL.md
Xiao-Q/skills/aistockresearcher/: README.md  SKILL.md  _meta.json  mcp_server.py  requirements.txt
Xiao-Q/skills/aitaxs-assistant/: README.md  SKILL.md  marketplace.json  plugin.json
Xiao-Q/skills/aityp-docker-image-find/: README.md  SKILL.md  _meta.json
Xiao-Q/skills/anime-avatar-generation/: _meta.json
Xiao-Q/skills/anime-social-portrait/: SKILL.md
Xiao-Q/skills/api-douyin-core/: _meta.json
Xiao-Q/skills/apifox-helper/: SKILL.md  config.json
Xiao-Q/skills/ark-novel-to-tuiwen/: SKILL.md  _meta.json  metadata.json
Xiao-Q/skills/articletodeck/: SKILL.md
Xiao-Q/skills/artwork-interpreter/: README.md  SKILL.md  config.json  manifest.json
Xiao-Q/skills/asosuite/: _meta.json
Xiao-Q/skills/autoxianyu/: SKILL.md  get_product_images.py  login.py  main.py  product_info.py  publish.py  pyproject.toml  stealth.py
Xiao-Q/skills/python-script-generator-pro/: SKILL.md  pyproject.toml  uv-lock.json
Xiao-Q/skills/python-script-generator-pro/assets/templates/Async Web Scraper Example/: Async_Web_Scraper_Example.py
Xiao-Q/skills/python-script-generator-pro/assets/templates/CLI Tool Example/: CLI_Tool_Example.py
Xiao-Q/skills/python-script-generator-pro/assets/templates/FastAPI Application with User Authentication/: FastAPI_Application_with_User_Authentication.py
Xiao-Q/skills/python-script-generator-pro/assets/templates/fastapi/: main.py
Xiao-Q/skills/python-script-generator-pro/evals/: eval_history.json
Xiao-Q/skills/python-script-generator-pro/references/: api_spec.md
Xiao-Q/skills/python-script-generator-pro/scripts/: __init__.py  helpers.py  main_function.py
Xiao-Q/skills/python-script-generator-pro/tests/: test_main.py
Xiao-Q/skills/python-script-generator-pro/tests/fixtures/: sample_input.csv  sample_input.json
(+1787 files in other folders)
