[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xianyu-auto-publish"
version = "2.0.0"
description = "闲鱼自动发布系统 - Linux优化版，反检测引擎"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
